tests/snapshots/snapshots__boids.msl.snap
---
source: tests/snapshots.rs
expression: msl
---
#include <metal_stdlib>
#include <simd/simd.h>

typedef uint type;

typedef metal::float2 type1;

struct Particle {
    type1 pos;
    type1 vel;
};

typedef float type2;

struct SimParams {
    type2 deltaT;
    type2 rule1Distance;
    type2 rule2Distance;
    type2 rule3Distance;
    type2 rule1Scale;
    type2 rule2Scale;
    type2 rule3Scale;
};

typedef Particle type3[1];

struct Particles {
    type3 particles;
};

typedef metal::uint3 type4;

typedef int type5;

kernel void main1(
    constant SimParams& params [[buffer(0)]],
    constant Particles& particlesSrc [[buffer(1)]],
    device Particles& particlesDst [[buffer(2)]],
    type4 gl_GlobalInvocationID [[thread_position_in_grid]]
) {
    type1 vPos;
    type1 vVel;
    type1 cMass;
    type1 cVel;
    type1 colVel;
    type5 cMassCount = 0;
    type5 cVelCount = 0;
    type1 pos1;
    type1 vel1;
    type i = 0;
    if ((gl_GlobalInvocationID.x >= 1500)) {
        return ;
    }
    vPos = particlesSrc.particles[gl_GlobalInvocationID.x].pos;
    vVel = particlesSrc.particles[gl_GlobalInvocationID.x].vel;
    cMass = metal::float2(0.0, 0.0);
    cVel = metal::float2(0.0, 0.0);
    colVel = metal::float2(0.0, 0.0);
    bool loop_init = true;
    while(true) {
        if (!loop_init) {
            i = (i + 1);
        }
        loop_init = false;
        if ((i >= 1500)) {
            break;
        }
        if ((i == gl_GlobalInvocationID.x)) {
            continue;
        }
        pos1 = particlesSrc.particles[i].pos;
        vel1 = particlesSrc.particles[i].vel;
        if ((metal::distance(pos1, vPos) < params.rule1Distance)) {
            cMass = (cMass + pos1);
            cMassCount = (cMassCount + 1);
        }
        if ((metal::distance(pos1, vPos) < params.rule2Distance)) {
            colVel = (colVel - (pos1 - vPos));
        }
        if ((metal::distance(pos1, vPos) < params.rule3Distance)) {
            cVel = (cVel + vel1);
            cVelCount = (cVelCount + 1);
        }
    }
    if ((cMassCount > 0)) {
        cMass = ((cMass * (1.0 / static_cast<float>(cMassCount))) - vPos);
    }
    if ((cVelCount > 0)) {
        cVel = (cVel * (1.0 / static_cast<float>(cVelCount)));
    }
    vVel = (((vVel + (cMass * params.rule1Scale)) + (colVel * params.rule2Scale)) + (cVel * params.rule3Scale));
    vVel = (metal::normalize(vVel) * metal::clamp(metal::length(vVel), 0.0, 0.1));
    vPos = (vPos + (vVel * params.deltaT));
    if ((vPos.x < -1.0)) {
        vPos.x = 1.0;
    }
    if ((vPos.x > 1.0)) {
        vPos.x = -1.0;
    }
    if ((vPos.y < -1.0)) {
        vPos.y = 1.0;
    }
    if ((vPos.y > 1.0)) {
        vPos.y = -1.0;
    }
    particlesDst.particles[gl_GlobalInvocationID.x].pos = vPos;
    particlesDst.particles[gl_GlobalInvocationID.x].vel = vVel;
    return ;
}

