tests/snapshots/snapshots__collatz.spvasm.snap
---
source: tests/snapshots.rs
expression: dis
---
; SPIR-V
; Version: 1.0
; Generator: rspirv
; Bound: 70
OpCapability Shader
%1 = OpExtInstImport "GLSL.std.450"
OpMemoryModel Logical GLSL450
OpEntryPoint GLCompute %39 "main" %52
OpExecutionMode %39 LocalSize 1 1 1
OpDecorate %45 BufferBlock
OpMemberDecorate %45 0 Offset 0
OpDecorate %46 ArrayStride 4
OpDecorate %44 DescriptorSet 0
OpDecorate %44 Binding 0
OpDecorate %52 BuiltIn GlobalInvocationId
%3 = OpTypeInt 32 0
%2 = OpConstant  %3  0
%4 = OpConstant  %3  1
%5 = OpConstant  %3  2
%6 = OpConstant  %3  3
%8 = OpTypePointer Function %3
%12 = OpTypeFunction %3 %3
%20 = OpTypeBool
%38 = OpTypeVoid
%40 = OpTypeFunction %38
%46 = OpTypeRuntimeArray %3
%45 = OpTypeStruct %46
%47 = OpTypePointer Uniform %45
%44 = OpVariable  %47  Uniform
%48 = OpTypeInt 32 1
%49 = OpConstant  %48  0
%50 = OpTypePointer Uniform %46
%53 = OpTypeVector %3 3
%54 = OpTypePointer Input %53
%52 = OpVariable  %54  Input
%55 = OpConstant  %48  0
%56 = OpTypePointer Input %3
%58 = OpTypePointer Uniform %3
%62 = OpConstant  %48  0
%63 = OpTypePointer Uniform %46
%65 = OpConstant  %48  0
%66 = OpTypePointer Input %3
%68 = OpTypePointer Uniform %3
%11 = OpFunction  %3  None %12
%10 = OpFunctionParameter  %3
%13 = OpLabel
%7 = OpVariable  %8  Function
%9 = OpVariable  %8  Function %2
OpStore %7 %10
OpBranch %14
%14 = OpLabel
OpLoopMerge %15 %17 None
OpBranch %16
%16 = OpLabel
%19 = OpLoad  %3  %7
%18 = OpULessThanEqual  %20  %19 %4
OpSelectionMerge %21 None
OpBranchConditional %18 %22 %23
%22 = OpLabel
OpBranch %15
%23 = OpLabel
OpBranch %21
%21 = OpLabel
%26 = OpLoad  %3  %7
%25 = OpUMod  %3  %26 %5
%24 = OpIEqual  %20  %25 %2
OpSelectionMerge %27 None
OpBranchConditional %24 %28 %29
%28 = OpLabel
%31 = OpLoad  %3  %7
%30 = OpUDiv  %3  %31 %5
OpStore %7 %30
OpBranch %27
%29 = OpLabel
%34 = OpLoad  %3  %7
%33 = OpIMul  %3  %6 %34
%32 = OpIAdd  %3  %33 %4
OpStore %7 %32
OpBranch %27
%27 = OpLabel
%36 = OpLoad  %3  %9
%35 = OpIAdd  %3  %36 %4
OpStore %9 %35
OpBranch %17
%17 = OpLabel
OpBranch %14
%15 = OpLabel
%37 = OpLoad  %3  %9
OpReturnValue %37
OpFunctionEnd
%39 = OpFunction  %38  None %40
%41 = OpLabel
%43 = OpAccessChain  %50  %44 %49
%51 = OpAccessChain  %56  %52 %55
%57 = OpLoad  %3  %51
%42 = OpAccessChain  %58  %43 %57
%61 = OpAccessChain  %63  %44 %62
%64 = OpAccessChain  %66  %52 %65
%67 = OpLoad  %3  %64
%60 = OpAccessChain  %68  %61 %67
%69 = OpLoad  %3  %60
%59 = OpFunctionCall  %3  %11 %69
OpStore %42 %59
OpReturn
OpFunctionEnd
