tests/snapshots/snapshots__empty-Compute.glsl.snap
---
source: tests/snapshots.rs
expression: string
---
#version 310 es

precision highp float;




void main() {

	return;
}

