tests/snapshots/snapshots__empty.msl.snap
---
source: tests/snapshots.rs
expression: msl
---
#include <metal_stdlib>
#include <simd/simd.h>


kernel void main1(
) {
}

