tests/snapshots/snapshots__empty.spvasm.snap
---
source: tests/snapshots.rs
expression: dis
---
; SPIR-V
; Version: 1.0
; Generator: rspirv
; Bound: 6
OpCapability Shader
%1 = OpExtInstImport "GLSL.std.450"
OpMemoryModel Logical GLSL450
OpEntryPoint GLCompute %3 "main"
OpExecutionMode %3 LocalSize 1 1 1
%0 = OpTypeVoid
%4 = OpTypeFunction %0
%3 = OpFunction  %0  None %4
%5 = OpLabel
OpReturn
OpFunctionEnd
