tests/snapshots/snapshots__quad-Vertex.glsl.snap
---
source: tests/snapshots.rs
expression: string
---
#version 310 es

precision highp float;



in vec2 a_pos;
in vec2 a_uv;
out vec2 v_uv;

void main() {

	v_uv = a_uv;
	gl_Position = vec4((1.2 * a_pos), 0.0, 1.0);
	return;
}

