tests/snapshots/snapshots__shadow.spvasm.snap
---
source: tests/snapshots.rs
expression: dis
---
; SPIR-V
; Version: 1.0
; Generator: rspirv
; Bound: 220
OpCapability Shader
%1 = OpExtInstImport "GLSL.std.450"
OpMemoryModel Logical GLSL450
OpEntryPoint Fragment %62 "fs_main" %113 %110 %216
OpExecutionMode %62 OriginUpperLeft
OpDecorate %26 DescriptorSet 0
OpDecorate %26 Binding 2
OpDecorate %31 DescriptorSet 0
OpDecorate %31 Binding 3
OpDecorate %74 Block
OpMemberDecorate %74 0 Offset 0
OpDecorate %73 DescriptorSet 0
OpDecorate %73 Binding 0
OpDecorate %98 BufferBlock
OpMemberDecorate %98 0 Offset 0
OpMemberDecorate %98 0 NonWritable
OpDecorate %99 ArrayStride 96
OpDecorate %100 Block
OpMemberDecorate %100 0 Offset 0
OpMemberDecorate %100 0 ColMajor
OpMemberDecorate %100 0 MatrixStride 16
OpMemberDecorate %100 1 Offset 64
OpMemberDecorate %100 2 Offset 80
OpDecorate %97 DescriptorSet 0
OpDecorate %97 Binding 1
OpDecorate %110 Location 1
OpDecorate %113 Location 0
OpDecorate %216 Location 0
%3 = OpTypeFloat 32
%2 = OpConstant  %3  0.0
%4 = OpConstant  %3  1.0
%5 = OpConstant  %3  0.5
%6 = OpConstant  %3  -0.5
%7 = OpConstant  %3  0.05
%9 = OpTypeVector %3 3
%8 = OpConstantComposite  %9  %7 %7 %7
%11 = OpTypeInt 32 0
%10 = OpConstant  %11  10
%12 = OpConstant  %11  0
%13 = OpConstant  %11  1
%16 = OpTypeVector %3 4
%18 = OpTypeFunction %3 %11 %16
%22 = OpTypeBool
%27 = OpTypeImage %3 2D 1 1 0 1 Unknown
%28 = OpTypePointer UniformConstant %27
%26 = OpVariable  %28  UniformConstant
%30 = OpTypeSampledImage %27
%32 = OpTypeSampler
%33 = OpTypePointer UniformConstant %32
%31 = OpVariable  %33  UniformConstant
%38 = OpTypeVector %3 2
%56 = OpConstant  %3  0.0
%58 = OpTypePointer Function %9
%60 = OpTypePointer Function %11
%61 = OpTypeVoid
%63 = OpTypeFunction %61
%75 = OpTypeVector %11 4
%74 = OpTypeStruct %75
%76 = OpTypePointer Uniform %74
%73 = OpVariable  %76  Uniform
%77 = OpTypeInt 32 1
%78 = OpConstant  %77  0
%79 = OpTypePointer Uniform %75
%80 = OpConstant  %77  0
%81 = OpTypePointer Uniform %11
%101 = OpTypeMatrix %16 4
%100 = OpTypeStruct %101 %16 %16
%99 = OpTypeRuntimeArray %100
%98 = OpTypeStruct %99
%102 = OpTypePointer Uniform %98
%97 = OpVariable  %102  Uniform
%103 = OpConstant  %77  0
%104 = OpTypePointer Uniform %99
%106 = OpTypePointer Uniform %100
%107 = OpConstant  %77  0
%108 = OpTypePointer Uniform %101
%111 = OpTypePointer Input %16
%110 = OpVariable  %111  Input
%114 = OpTypePointer Input %9
%113 = OpVariable  %114  Input
%122 = OpConstant  %77  0
%123 = OpTypePointer Uniform %99
%125 = OpTypePointer Uniform %100
%126 = OpConstant  %77  1
%127 = OpTypePointer Uniform %16
%128 = OpConstant  %77  0
%129 = OpTypePointer Uniform %3
%135 = OpConstant  %77  0
%136 = OpTypePointer Uniform %99
%138 = OpTypePointer Uniform %100
%139 = OpConstant  %77  1
%140 = OpTypePointer Uniform %16
%141 = OpConstant  %77  1
%142 = OpTypePointer Uniform %3
%148 = OpConstant  %77  0
%149 = OpTypePointer Uniform %99
%151 = OpTypePointer Uniform %100
%152 = OpConstant  %77  1
%153 = OpTypePointer Uniform %16
%154 = OpConstant  %77  2
%155 = OpTypePointer Uniform %3
%159 = OpConstant  %77  0
%160 = OpTypePointer Input %3
%163 = OpConstant  %77  1
%164 = OpTypePointer Input %3
%167 = OpConstant  %77  2
%168 = OpTypePointer Input %3
%178 = OpConstant  %77  0
%179 = OpTypePointer Uniform %99
%181 = OpTypePointer Uniform %100
%182 = OpConstant  %77  2
%183 = OpTypePointer Uniform %16
%184 = OpConstant  %77  0
%185 = OpTypePointer Uniform %3
%191 = OpConstant  %77  0
%192 = OpTypePointer Uniform %99
%194 = OpTypePointer Uniform %100
%195 = OpConstant  %77  2
%196 = OpTypePointer Uniform %16
%197 = OpConstant  %77  1
%198 = OpTypePointer Uniform %3
%204 = OpConstant  %77  0
%205 = OpTypePointer Uniform %99
%207 = OpTypePointer Uniform %100
%208 = OpConstant  %77  2
%209 = OpTypePointer Uniform %16
%210 = OpConstant  %77  2
%211 = OpTypePointer Uniform %3
%217 = OpTypePointer Output %16
%216 = OpVariable  %217  Output
%17 = OpFunction  %3  None %18
%14 = OpFunctionParameter  %11
%15 = OpFunctionParameter  %16
%19 = OpLabel
%21 = OpCompositeExtract  %3  %15 3
%20 = OpFOrdLessThanEqual  %22  %21 %2
OpSelectionMerge %23 None
OpBranchConditional %20 %24 %25
%24 = OpLabel
OpReturnValue %4
%25 = OpLabel
OpBranch %23
%23 = OpLabel
%29 = OpLoad  %27  %26
%34 = OpLoad  %32  %31
%39 = OpCompositeExtract  %3  %15 0
%40 = OpCompositeExtract  %3  %15 1
%41 = OpCompositeConstruct  %38  %39 %40
%42 = OpCompositeConstruct  %38  %5 %6
%37 = OpFMul  %38  %41 %42
%44 = OpCompositeExtract  %3  %15 3
%43 = OpFDiv  %3  %4 %44
%36 = OpVectorTimesScalar  %38  %37 %43
%45 = OpCompositeConstruct  %38  %5 %5
%35 = OpFAdd  %38  %36 %45
%46 = OpCompositeExtract  %3  %35 0
%47 = OpCompositeExtract  %3  %35 1
%48 = OpConvertUToF  %3  %14
%49 = OpCompositeConstruct  %9  %46 %47 %48
%50 = OpSampledImage  %30  %29 %34
%53 = OpCompositeExtract  %3  %15 2
%55 = OpCompositeExtract  %3  %15 3
%54 = OpFDiv  %3  %4 %55
%52 = OpFMul  %3  %53 %54
%51 = OpImageSampleDrefExplicitLod  %3  %50 %49 %52 Lod %56
OpReturnValue %51
OpFunctionEnd
%62 = OpFunction  %61  None %63
%64 = OpLabel
%57 = OpVariable  %58  Function %8
%59 = OpVariable  %60  Function %12
OpBranch %65
%65 = OpLabel
OpLoopMerge %66 %68 None
OpBranch %67
%67 = OpLabel
%70 = OpLoad  %11  %59
%72 = OpAccessChain  %79  %73 %78
%71 = OpAccessChain  %81  %72 %80
%82 = OpLoad  %11  %71
%83 = OpExtInst  %11  %1 UMin %82 %10
%69 = OpUGreaterThanEqual  %22  %70 %83
OpSelectionMerge %84 None
OpBranchConditional %69 %85 %86
%85 = OpLabel
OpBranch %66
%86 = OpLabel
OpBranch %84
%84 = OpLabel
%88 = OpLoad  %9  %57
%92 = OpLoad  %11  %59
%96 = OpAccessChain  %104  %97 %103
%105 = OpLoad  %11  %59
%95 = OpAccessChain  %106  %96 %105
%94 = OpAccessChain  %108  %95 %107
%109 = OpLoad  %101  %94
%112 = OpLoad  %16  %110
%93 = OpMatrixTimesVector  %16  %109 %112
%91 = OpFunctionCall  %3  %17 %92 %93
%115 = OpLoad  %9  %113
%116 = OpExtInst  %9  %1 Normalize %115
%121 = OpAccessChain  %123  %97 %122
%124 = OpLoad  %11  %59
%120 = OpAccessChain  %125  %121 %124
%119 = OpAccessChain  %127  %120 %126
%118 = OpAccessChain  %129  %119 %128
%130 = OpLoad  %3  %118
%134 = OpAccessChain  %136  %97 %135
%137 = OpLoad  %11  %59
%133 = OpAccessChain  %138  %134 %137
%132 = OpAccessChain  %140  %133 %139
%131 = OpAccessChain  %142  %132 %141
%143 = OpLoad  %3  %131
%147 = OpAccessChain  %149  %97 %148
%150 = OpLoad  %11  %59
%146 = OpAccessChain  %151  %147 %150
%145 = OpAccessChain  %153  %146 %152
%144 = OpAccessChain  %155  %145 %154
%156 = OpLoad  %3  %144
%157 = OpCompositeConstruct  %9  %130 %143 %156
%158 = OpAccessChain  %160  %110 %159
%161 = OpLoad  %3  %158
%162 = OpAccessChain  %164  %110 %163
%165 = OpLoad  %3  %162
%166 = OpAccessChain  %168  %110 %167
%169 = OpLoad  %3  %166
%170 = OpCompositeConstruct  %9  %161 %165 %169
%117 = OpFSub  %9  %157 %170
%171 = OpExtInst  %9  %1 Normalize %117
%172 = OpDot  %3  %116 %171
%173 = OpExtInst  %3  %1 FMax %2 %172
%90 = OpFMul  %3  %91 %173
%177 = OpAccessChain  %179  %97 %178
%180 = OpLoad  %11  %59
%176 = OpAccessChain  %181  %177 %180
%175 = OpAccessChain  %183  %176 %182
%174 = OpAccessChain  %185  %175 %184
%186 = OpLoad  %3  %174
%190 = OpAccessChain  %192  %97 %191
%193 = OpLoad  %11  %59
%189 = OpAccessChain  %194  %190 %193
%188 = OpAccessChain  %196  %189 %195
%187 = OpAccessChain  %198  %188 %197
%199 = OpLoad  %3  %187
%203 = OpAccessChain  %205  %97 %204
%206 = OpLoad  %11  %59
%202 = OpAccessChain  %207  %203 %206
%201 = OpAccessChain  %209  %202 %208
%200 = OpAccessChain  %211  %201 %210
%212 = OpLoad  %3  %200
%213 = OpCompositeConstruct  %9  %186 %199 %212
%89 = OpVectorTimesScalar  %9  %213 %90
%87 = OpFAdd  %9  %88 %89
OpStore %57 %87
OpBranch %68
%68 = OpLabel
%215 = OpLoad  %11  %59
%214 = OpIAdd  %11  %215 %13
OpStore %59 %214
OpBranch %65
%66 = OpLabel
%218 = OpLoad  %9  %57
%219 = OpCompositeConstruct  %16  %218 %4
OpStore %216 %219
OpReturn
OpFunctionEnd
